--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
     <meta charset="UTF-8">
-    <title>خانه – فروشگاه تک</title>
+    <title>معرفی – فروشگاه تک</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,8 +19,9 @@
 </nav>
 
 <section>
-    <h2>خوش آمدید به فروشگاه تک</h2>
-    <p>ما بهترین لباس‌های مردانه و زنانه را با کیفیت عالی و قیمت مناسب ارائه می‌کنیم.</p>
+    <h2>درباره فروشگاه ما</h2>
+    <p>فروشگاه تک ارائه‌دهنده جدیدترین لباس‌های زنانه و مردانه با کیفیت بالا و قیمت مناسب است.</p>
+    <p>ما از سال 1404 فعالیت خود را شروع کرده‌ایم و یکی از پیشتازان صنعت لباس هستیم.</p>
 </section>
 
 <footer>
@@ -29,6 +30,4 @@
 
 </body>
 </html>
-
-
 
