--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
     <meta charset="UTF-8">
-    <title>خانه – فروشگاه تک</title>
+    <title>تماس با ما – فروشگاه تک</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,8 +19,9 @@
 </nav>
 
 <section>
-    <h2>خوش آمدید به فروشگاه تک</h2>
-    <p>ما بهترین لباس‌های مردانه و زنانه را با کیفیت عالی و قیمت مناسب ارائه می‌کنیم.</p>
+    <h2>تماس با ما</h2>
+    <p>ایمیل: alipourhashemi2@gmail.com</p>
+    <p>تلفن: 09022396757</p>
 </section>
 
 <footer>
@@ -29,6 +30,4 @@
 
 </body>
 </html>
-
-
 
