--- a/team.html
+++ b/team.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
     <meta charset="UTF-8">
-    <title>خانه – فروشگاه تک</title>
+    <title>اعضا – فروشگاه تک</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,8 +19,12 @@
 </nav>
 
 <section>
-    <h2>خوش آمدید به فروشگاه تک</h2>
-    <p>ما بهترین لباس‌های مردانه و زنانه را با کیفیت عالی و قیمت مناسب ارائه می‌کنیم.</p>
+    <h2>اعضای تیم</h2>
+    <ul>
+        <li>سید علی پورهاشمی – مدیر فروش</li>
+        <li>سارا احمدی – طراح لباس</li>
+        <li>محمد کریمی – پشتیبانی</li>
+    </ul>
 </section>
 
 <footer>
@@ -29,6 +33,5 @@
 
 </body>
 </html>
-
 
 
