--- a/products.html
+++ b/products.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
     <meta charset="UTF-8">
-    <title>خانه – فروشگاه تک</title>
+    <title>محصولات – فروشگاه تک</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,8 +19,19 @@
 </nav>
 
 <section>
-    <h2>خوش آمدید به فروشگاه تک</h2>
-    <p>ما بهترین لباس‌های مردانه و زنانه را با کیفیت عالی و قیمت مناسب ارائه می‌کنیم.</p>
+    <h2>محصولات ما</h2>
+    <div class="product-list">
+        <div class="product">
+            <img src="images/tshirt.jpg" alt="تی‌شرت مردانه">
+            <h4>تی‌شرت مردانه</h4>
+            <p>قیمت: 120,000 تومان</p>
+        </div>
+        <div class="product">
+            <img src="images/manto.jpg" alt="مانتو زنانه">
+            <h4>مانتو زنانه</h4>
+            <p>قیمت: 320,000 تومان</p>
+        </div>
+    </div>
 </section>
 
 <footer>
@@ -29,6 +40,5 @@
 
 </body>
 </html>
-
 
 
